# AssetStudio-macOS

./: .gitignore  AssetStudio.sln  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
AssetStudio/: AssetStudio.csproj
AssetStudio.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  AssetListColumnWidths.cs  AssetStudio.Maui.csproj  DoubleToGridLengthConverter.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MeshViewerHtml.cs  SceneTreeRow.cs
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj  DllLoader.cs
AssetStudio/Brotli/: BrotliInputStream.cs
AssetStudio/Classes/: AnimationClip.cs  Shader.cs  Texture2D.cs
AssetStudio/Math/: Half.cs
AssetStudioCore/: AppLogger.cs  AssetItem.cs  AssetNode.cs  AssetStudioCore.csproj  AudioPreviewHelper.cs  ExportSettings.cs  Exporter.cs  MeshFbxConverter.cs  MeshViewerHelper.cs  PreviewHelper.cs  ShaderPreviewHelper.cs  Studio.cs  TypeTreeItem.cs
AssetStudioFBXNative/: CMakeLists.txt
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj
AssetStudioGUI/: AssetStudioGUI.csproj
AssetStudioUtility/: AssetStudioUtility.csproj
AssetStudioUtility/FMOD Studio API/: fmod.cs
Texture2DDecoderNative/: CMakeLists.txt
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
Texture2DDecoderWrapper/: Texture2DDecoderWrapper.csproj
